--- a/index.html
+++ b/index.html
@@ -4,13 +4,143 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cryptcon</title>
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/flexboxgrid.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <section class="site-hero">
+    <header class="site-hero__header">
+      <div class="site-hero__container container">
+        <div class="hero" id="hero">
+          <div class="hero__logo">
+            <a href="index.html">
+              <img class="site__logo-img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/logo.png" alt="logo" width="236" height="38">
+            </a>
+          </div>
+          <nav class="hero__nav hero-nav">
+            <ul class="hero-nav__list">
+              <li class="hero-nav__item hero__more"><a class="hero-nav__link" href="#">HOME <i class='bx bx-chevron-down'></i></a>
+              <ul class="hero__nav-more home-more more">
+                <li class="more__item"><a class="more__link" href="#"> Home One</a></li>
+                <li class="more__item"><a class="more__link" href="#">Home Two</a></li>
+              </ul>
+              </li>
 
+              <li class="hero-nav__item hero__more"><a class="hero-nav__link" href="#">PAGES <i class='bx bx-chevron-down'></i></a>
+                <ul class="hero__nav-more home-more more">
+                  <li class="more__item"><a class="more__link" href="#"> About</a></li>
+                  <li class="more__item"><a class="more__link" href="#">Blog</a></li>
+                  <li class="more__item"><a class="more__link" href="#">Token Sale</a></li>
+                  <li class="more__item"><a class="more__link" href="#">Contact</a></li>
+                  <li class="more__item"><a class="more__link" href="#">FAQ</a></li>
+                  <li class="more__item"><a class="more__link" href="#">404 Page</a></li>
+                </ul>
+              </li>
+              <li class="hero-nav__item"><a class="hero-nav__link" href="#">FEATURE</a></li>
+              <li class="hero-nav__item"><a class="hero-nav__link" href="#">ROADMAP</a></li>
+              <li class="hero-nav__item"><a class="hero-nav__link" href="#">TEAM</a></li>
+              <li class="hero-nav__sign-link"><a class="hero-nav__sign btn" href="#">SIGN IN</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div>
+        <a class="up-btn" href="#hero">
+          <i class='bx bx-chevron-up'></i>
+        </a>
+      </div>
+    </header>
+    <div class="site-hero__content site-hero-content">
+      <div class="site-hero-content__container container">
+        <div class="content">
+          <div class="content__wrapper col-md-6">
+            <h2 class="content__title">Invest In <span>Cryptocoin</span> Way To Trade</h2>
+            <p class="content__text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem</p>
+            <a class="content__btn btn" href="#">LEARN MORE</a>
+          </div>
+          <div class="content__image">
+            <img class="content__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/about-2.png" alt="hero-img" width="579" height="441">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <main>
+    <section class="it-works">
+      <div class="it-works__container container">
+        <div class="works">
+          <h2 class="works__title">WHAT IS CRYPTCON</h2>
+          <h2 class="works__subtitle">How it Works</h2>
+          <p class="works__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+
+        </div>
+        <div class="works__sell works-sell">
+          <div class="works-sell__animation col-md-5">
+            <div class="works-sell__bg"></div>
+            <img class="works-sell__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/work-process.png" alt="works-sell-animation" width="385" height="433">
+          </div>
+          <div class="works-sell__text works-sell-text col-md-6">
+            <h2 class="works-sell-text__tite">We’ve built a platform to buy and sell shares.
+            </h2>
+            <p class="works-sell-text__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+            </p>
+            <ul class="works-sell-text__list">
+              <li class="works-sell-text__item"><i class='bx bxs-check-circle'></i>Lorem Ipsum is simply dummy text of the printing and typesetting</li>
+              <li class="works-sell-text__item"><i class='bx bxs-check-circle'></i>Lorem Ipsum is simply dummy text of the printing and typesetting</li>
+              <li class="works-sell-text__item"><i class='bx bxs-check-circle'></i>Lorem Ipsum is simply dummy text of the printing and typesetting</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="best-features">
+      <div class="best-features__container container">
+        <div class="features">
+          <h2 class="features__title">CRYPTCON FEATURE</h2>
+          <h3 class="features__subtitle">Best Features</h3>
+          <p class="features__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+          <ul class="features__list features-list">
+            <li class="features-list__item">
+              <h2 class="features-list__title">Safe & Secure</h2>
+              <p class="features-list__text">Lorem ipsum dolor sit amet, consectetur adipi-sicing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit amet, labore et.Lorem ipsum dolor sit amet.</p>
+            </li>
+            <li class="features-list__item">
+              <h2 class="features-list__title">Early Bonus</h2>
+              <p class="features-list__text">Lorem ipsum dolor sit amet, consectetur adipi-sicing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit amet, labore et.Lorem ipsum dolor sit amet.</p>
+            </li>
+            <li class="features-list__item">
+              <h2 class="features-list__title">Univarsal Access</h2>
+              <p class="features-list__text">Lorem ipsum dolor sit amet, consectetur adipi-sicing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit amet, labore et.Lorem ipsum dolor sit amet.</p>
+            </li>
+            <li class="features-list__item">
+              <h2 class="features-list__title">Secure Storage</h2>
+              <p class="features-list__text">Lorem ipsum dolor sit amet, consectetur adipi-sicing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit amet, labore et.Lorem ipsum dolor sit amet.</p>
+            </li>
+            <li class="features-list__item">
+              <h2 class="features-list__title">Low Cost</h2>
+              <p class="features-list__text">Lorem ipsum dolor sit amet, consectetur adipi-sicing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit amet, labore et.Lorem ipsum dolor sit amet.</p>
+            </li>
+            <li class="features-list__item">
+              <h2 class="features-list__title">Several Profit</h2>
+              <p class="features-list__text">Lorem ipsum dolor sit amet, consectetur adipi-sicing elit, sed do eiusmod tempor incididunt ut labore et.Lorem ipsum dolor sit amet, labore et.Lorem ipsum dolor sit amet.</p>
+            </li>
+            
+          </ul>
+        </div>
+      </div>
+    </section>
+
+  </main>
   <script src="js/main.js"></script>
 </body>
 </html>
