--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cryptcon</title>
+  <link rel="shortcut icon" href="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/loader.svg" type="image/x-icon">
   <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,6 +53,34 @@
               <li class="hero-nav__sign-link"><a class="hero-nav__sign btn" href="#">SIGN IN</a></li>
             </ul>
           </nav>
+          <div class="hero__menu hero-menu">
+            <button class="hero__menu-btn"><i class='bx bx-menu'></i></button>
+          </div>
+          <div class="hero__modal modal ">
+            <ul class="modal__list ">
+              <li class="modal__item">
+                <a class="modal__link" href="#">HOME</a>
+              </li>
+              <li class="modal__item">
+                <a class="modal__link" href="#">PAGES</a>
+              </li>
+              <li class="modal__item">
+                <a class="modal__link" href="#">FEATURE</a>
+              </li>
+              <li class="modal__item">
+                <a class="modal__link" href="#">ROADMAP</a>
+              </li>
+              <li class="modal__item">
+                <a class="modal__link" href="#">TEAM</a>
+              </li>
+              <li class="modal__item">
+                <a class="modal__link" href="#">SIGN IN</a>
+              </li>
+            </ul>
+            <div class="modal__height">
+
+            </div>
+          </div>
         </div>
       </div>
       <div>
@@ -85,11 +114,11 @@
 
         </div>
         <div class="works__sell works-sell">
-          <div class="works-sell__animation col-md-5">
+          <div class="works-sell__animation col-md-6">
             <div class="works-sell__bg"></div>
-            <img class="works-sell__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/work-process.png" alt="works-sell-animation" width="385" height="433">
+            <img class="works-sell__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/work-process.png" alt="works-sell-animation" >
           </div>
-          <div class="works-sell__text works-sell-text col-md-6">
+          <div class="works-sell__text works-sell-text col-md-5 ">
             <h2 class="works-sell-text__tite">We’ve built a platform to buy and sell shares.
             </h2>
             <p class="works-sell-text__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
