--- a/index.html
+++ b/index.html
@@ -168,7 +168,210 @@
         </div>
       </div>
     </section>
+    
 
+    <section class="team" id="team">
+      <div class="team__container container">
+        <h2 class="team__subject">MEET THE TEAM</h2>
+        <h2 class="team__subtitle">Our Team</h2>
+        <p class="team__quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        <div class="team__row row">
+          <div class="team__item col-md-6 col-sm-6 col-xs-12">
+            <div class="team__block">
+              <div class="team__img">
+                <a href="#">
+                  <img src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/team-1.jpg" alt="team">
+                </a>
+              </div>
+              <div class="team__des">
+                <h2 class="team__title">John Doe</h2>
+                <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor it amet, consectetur</p>
+                <ul class="team__list">
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-facebook'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-twitter'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-linkedin'></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="team__item col-md-6 col-sm-6 col-xs-12">
+            <div class="team__block">
+              <div class="team__img">
+                <a href="#">
+                  <img src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/team-2.jpg" alt="team">
+                </a>
+              </div>
+              <div class="team__des">
+                <h2 class="team__title">John Doe</h2>
+                <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor it amet, consectetur</p>
+                <ul class="team__list">
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-facebook'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-twitter'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-linkedin'></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="team__item col-md-6 col-sm-6 col-xs-12">
+            <div class="team__block">
+              <div class="team__img">
+                <a href="#">
+                  <img src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/team-3.jpg" alt="team">
+                </a>
+              </div>
+              <div class="team__des">
+                <h2 class="team__title">John Doe</h2>
+                <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor it amet, consectetur</p>
+                <ul class="team__list">
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-facebook'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-twitter'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-linkedin'></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="team__item col-md-6 col-sm-6 col-xs-12">
+            <div class="team__block">
+              <div class="team__img">
+                <a href="#">
+                  <img src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/team-4.jpg" alt="team">
+                </a>
+              </div>
+              <div class="team__des">
+                <h2 class="team__title">John Doe</h2>
+                <p class="team__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor it amet, consectetur</p>
+                <ul class="team__list">
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-facebook'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-twitter'></i></a>
+                  </li>
+                  <li class="team__socials">
+                    <a class="team__link" href="#"><i class='bx bxl-linkedin'></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="token" id="token">
+      <div class="token__container container">
+        <div class="token__row row">
+          <div class="token__block col-md-6 col-sm-6 col-xs-12">
+            <div class="token__elements">
+              <h2 class="token__sub-title">token</h2>
+              <h2 class="token__title">Token Sale</h2>
+              <p class="token__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+              <ul class="token__list">
+                <li class="token__item">73% Finacial Overhead</li>
+                <li class="token__item">55% Bonus & found</li>
+                <li class="token__item">12% Gift Code Inventory</li>
+                <li class="token__item">32% Bounty and Overhead</li>
+                <li class="token__item">38% it infastrueture</li>
+              </ul>
+            </div>
+          </div>
+          <div class="token__block col-md-6 col-sm-6 col-xs-12">
+            <div class="token__elements token-img">
+              <img class="token__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/graph-logo.png" alt="">
+              <svg viewBox="0 0 400 400" preserveAspectRatio="none" class="listtopie-svg"><desc>Created with Snap</desc><defs></defs><g><path d="M390,200 A190,190 0 0,1 377.64606183596965,267.3934471159537 L279.4732381897759,230.14970002555822 A85,85 0 0,0 285,200 L390,200 Z" id="PathsvgSkumaxy1000" idInt="0" stroke="#f2f8fe" fill="#f8c04e" start="0" deg="20.77520340586566" note="12.2" style="fill-opacity: 1; stroke-width: 5;"></path><path d="M377.64606183596965,267.3934471159537 A190,190 0 0,1 245.03381174351586,384.58590357838693 L220.14670525367814,282.57790423243625 A85,85 0 0,0 279.4732381897759,230.14970002555822 L377.64606183596965,267.3934471159537 Z" id="PathsvgSkumaxy1001" idInt="1" stroke="#f2f8fe" fill="#ac56f7" start="20.77520340586566" deg="55.514068117313165" note="32.6" style="fill-opacity: 1; stroke-width: 5;"></path><path d="M245.03381174351586,384.58590357838693 A190,190 0 0,1 51.63636215462063,318.69385394907823 L133.62679359548815,253.0998820298508 A85,85 0 0,0 220.14670525367814,282.57790423243625 L245.03381174351586,384.58590357838693 Z" id="PathsvgSkumaxy1002" idInt="2" stroke="#f2f8fe" fill="#61f89f" start="76.28927152317883" deg="65.05022705771052" note="38.2" style="fill-opacity: 1; stroke-width: 5;"></path><path d="M51.63636215462063,318.69385394907823 A190,190 0 0,1 91.94264131759873,43.71945983398035 L151.65855006313626,130.0850215046754 A85,85 0 0,0 133.62679359548815,253.0998820298508 L51.63636215462063,318.69385394907823 Z" id="PathsvgSkumaxy1003" idInt="3" stroke="#f2f8fe" fill="#5ad6f8" start="141.33949858088934" deg="93.99928098391675" note="55.2" style="fill-opacity: 1; stroke-width: 5;"></path><path d="M91.94264131759873,43.71945983398035 A190,190 0 0,1 389.9999971061345,199.9668387443806 L284.99999870537596,199.98516470143343 A85,85 0 0,0 151.65855006313626,130.0850215046754 L91.94264131759873,43.71945983398035 Z" id="PathsvgSkumaxy1004" idInt="4" stroke="#f2f8fe" fill="#f85d77" start="235.3387795648061" deg="124.65122043519396" note="73.2" style="fill-opacity: 1; stroke-width: 5;"></path></g><g><text x="319.4886326968517" y="234.7999294248412" id="tsvgSkumaxy100PathsvgSkumaxy1000" stroke="#3d1f94" fill="#3d1f94" tx="335.2464451968517" ty="224.7921169248412" style="font-size: 18px; pointer-events: none; font-family: Rubik; font-weight: 300; opacity: 1;" transform="matrix(0,1,-1,0,560.0386,-110.4543)">12.2</text><text x="275.29448723033147" y="313.0404709817546" id="tsvgSkumaxy100PathsvgSkumaxy1001" stroke="#3d1f94" fill="#3d1f94" tx="291.05229973033147" ty="303.0326584817546" style="font-size: 18px; pointer-events: none; font-family: Rubik; font-weight: 300; opacity: 1;" transform="matrix(0,1,-1,0,594.085,11.9804)">32.6</text><text x="139.8979759114676" y="340.16095652115484" id="tsvgSkumaxy100PathsvgSkumaxy1002" stroke="#3d1f94" fill="#3d1f94" tx="155.6557884114676" ty="330.15314402115484" style="font-size: 18px; pointer-events: none; font-family: Rubik; font-weight: 300; opacity: 1;" transform="matrix(0,1,-1,0,485.8089,174.4974)">38.2</text><text x="48.19598219649496" y="190.06589628022414" id="tsvgSkumaxy100PathsvgSkumaxy1003" stroke="#3d1f94" fill="#3d1f94" tx="63.95379469649496" ty="180.05808378022414" style="font-size: 18px; pointer-events: none; font-family: Rubik; font-weight: 300; opacity: 1;" transform="matrix(0,1,-1,0,244.0119,116.1043)">55.2</text><text x="248.0822921358291" y="88.22648782299385" id="tsvgSkumaxy100PathsvgSkumaxy1004" stroke="#3d1f94" fill="#3d1f94" tx="263.8401046358291" ty="78.21867532299385" style="font-size: 18px; pointer-events: none; font-family: Rubik; font-weight: 300; opacity: 1;" transform="matrix(0,1,-1,0,342.0588,-185.6214)">73.2</text></g><line x1="283.6068933944174" x2="386.88599699928596" y1="215.32603591717455" y2="234.2581979325078" id="lsvgSkumaxy1000"></line><line x1="256.2868761969322" x2="325.8177232637308" y1="263.6929161523574" y2="342.3724008111518" id="lsvgSkumaxy1001"></line><line x1="172.5872146543618" x2="138.7243621685734" y1="280.45830721307755" y2="379.84798082923214" id="lsvgSkumaxy1002"></line><line x1="115.89870944874234" x2="12.008879944247582" y1="187.67226997322948" y2="172.44389758721883" id="lsvgSkumaxy1003"></line><line x1="239.46479195669437" x2="288.2154173149639" y1="124.71699929057802" y2="31.72035135540969" id="lsvgSkumaxy1004"></line></svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="our-blog">
+      <div class="our-blog__container container">
+        <div class="blog">
+          <h2 class="blog__title token__sub-title">NEWS</h2>
+          <h3 class="blog__subtitle token__title">Our Blog</h3>
+          <p class="blog__text token__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+          <ul class="blog__list blog-list">
+            <li class="blog-list__item">
+              <a class="blog-list__img-link" href="#">
+                <img class="blog-list__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/blog-1.jpg" alt="img">
+              </a>
+              <a class="blog-list__link" href="#">Cryptocash is a clean, modern template </a>
+              <span class="blog__des">March 20,2019 | by john doe</span>
+              <p class="blog__txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur </p>
+              <a class="blog__read-btn" href="#">Read More</a>
+            </li>
+            <li class="blog-list__item">
+              <a class="blog-list__img-link" href="#">
+                <img class="blog-list__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/blog-2.jpg" alt="img">
+              </a>
+              <a class="blog-list__link" href="#">Cryptocash is a clean, modern template </a>
+              <span class="blog__des">March 20,2019 | by john doe</span>
+              <p class="blog__txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur </p>
+              <a class="blog__read-btn" href="#">Read More</a>
+            </li>
+            <li class="blog-list__item">
+              <a class="blog-list__img-link" href="#">
+                <img class="blog-list__img" src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/blog-3.jpg" alt="img">
+              </a>
+              <a class="blog-list__link" href="#">Cryptocash is a clean, modern template </a>
+              <span class="blog__des">March 20,2019 | by john doe</span>
+              <p class="blog__txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur </p>
+              <a class="blog__read-btn" href="#">Read More</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="apps" id="apps">
+      <div class="apps__container container">
+        <div class="apps__row row">
+          <div class="apps__block col-sm-12 col-md-6 col-xs-12">
+            <div class="apps__element apps--img">
+              <img src="https://themes.templatescoder.com/crypton/html/demo/1-0/02-Light-Theme/images/ico-img.png" alt="apps">
+            </div>
+          </div>
+          <div class="apps__block col-sm-12 col-md-6 col-xs-12">
+            <div class="apps__element">
+              <div class="work__des">
+                <h2 class="apps__title">ico apps</h3>
+                <h3 class="work__subtitle">ICO Mobile App</h3>
+                <p class="work__iner-text apps__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley also the leap into electronic typesetting, remaining essentially unchanged.
+                </p>
+                <ul class="work__list">
+                  <li class="work__item">
+                    <p class="apps__text"><i class='bx bxs-check-circle'></i>Crypto-news curation</p>
+                  </li>
+                  <li class="work__item">
+                    <p class="apps__text"><i class='bx bxs-check-circle'></i>Natural Language Understanding</p>
+                  </li>
+                  <li class="work__item">
+                    <p class="apps__text apps--margin"><i class='bx bxs-check-circle'></i>Et harum quidem rerum facilis est et expedita distinctio.</p>
+                  </li>
+                </ul>
+                <a class="btn" href="#">get the app now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="js/main.js"></script>
 </body>
