--- a/index.html
+++ b/index.html
@@ -372,6 +372,22 @@
         </div>
       </div>
     </section>
+    <div class="faqs" id="faqs">
+      <div class="faqs__container container">
+        <div class="faq">
+          <h2 class="faq__title">FAQS</h2>
+          <h3 class="faq__subtitle">Frequently Asked questions</h3>
+          <p class="faq__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+          <ul class="faq__list faq-list">
+            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="js/main.js"></script>
 </body>
