add FAQ section

--- a/index.html
+++ b/index.html
@@ -379,11 +379,31 @@
           <h3 class="faq__subtitle">Frequently Asked questions</h3>
           <p class="faq__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
           <ul class="faq__list faq-list">
-            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
-            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
-            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
-            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
-            <li class="faq-list__item"><a class="faq-list__link" href="#"></a></li>
+            <li class="faq-list__item faq-list__item--active"><a class="faq-list__link" href="#">GENERAL</a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#">PRE-ICO & ICO</a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#">TOKENS</a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#">CLIENT</a></li>
+            <li class="faq-list__item"><a class="faq-list__link" href="#">LEGAL</a></li>
+          </ul>
+          <ul class="faq__wrapper faq-wrapper">
+            <li class="faq-wrapper__item">
+              <h2 class="faq-wrapper__title">What is Ico Crypto?</h2>
+              <p class="faq-wrapper__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged.</p>
+            </li>
+            <li class="faq-wrapper__item">
+              <h2 class="faq-wrapper__title">What cryptocurrencies can I use to purchase?</h2>
+              <p class="faq-wrapper__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged.</p>
+            </li>
+            <li class="faq-wrapper__item">
+              <h2 class="faq-wrapper__title">How can I participate in the ICO Token sale?</h2>
+              <p class="faq-wrapper__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged.</p>
+            </li>
+            <li class="faq-wrapper__item">
+              <h2 class="faq-wrapper__title">How do I benefit from the ICO Token?
+              </h2>
+              <p class="faq-wrapper__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. remaining essentially unchanged.</p>
+            </li>
+            
           </ul>
         </div>
       </div>
